namespace library_management_system.model;

public interface ICsvConvertible
{
    string ToCsv();
}